# hermes-ssh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_template/: __init__.py  plugin.yaml  schemas.py  tools.py
src/ssh_tools/: __init__.py  config.py  manager.py  models.py  plugin.yaml  schemas.py  tools.py  utils.py
src/ssh_tools/handlers/: __init__.py  machines.py  sessions.py  slash.py  terminal.py
ssh-tools/: __init__.py  plugin.yaml  registry.py  schemas.py  sessions.py  ssh.py  tools.py
ssh_tools/: __init__.py  config.py  manager.py  plugin.yaml  schemas.py
tests/: conftest.py  test_config.py  test_manager.py  test_tools.py  test_utils.py
