[project]
name = "hermes-ssh"
version = "0.1.0"
description = "SSH remote execution plugin for Hermes Agent"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "TheEpTic", email = "nexus@eptic.me" },
]

[project.urls]
Homepage = "https://github.com/TheEpTic/hermes-ssh"
Repository = "https://github.com/TheEpTic/hermes-ssh"
Issues = "https://github.com/TheEpTic/hermes-ssh/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["ssh_tools"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # use X | Y for union (need from __future__ import annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["ssh_tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
